--- a/index.html
+++ b/index.html
@@ -151,6 +151,23 @@
     window.pdfjsLib.GlobalWorkerOptions.workerSrc =
       "https://cdn.jsdelivr.net/npm/pdfjs-dist@3.11.174/build/pdf.worker.min.js";
   }
+  function normalizePdfBytes(u8) {
+  // pdf-lib 对头部更严格：必须从 %PDF- 开始
+  const header = [0x25,0x50,0x44,0x46,0x2D]; // "%PDF-"
+  const maxScan = Math.min(u8.length - header.length, 4096); // 扫描前4KB足够
+  for (let i = 0; i <= maxScan; i++) {
+    let ok = true;
+    for (let j = 0; j < header.length; j++) {
+      if (u8[i + j] !== header[j]) { ok = false; break; }
+    }
+    if (ok) {
+      return i === 0 ? u8 : u8.slice(i);
+    }
+  }
+  // 找不到就原样返回，让错误信息继续提示
+  return u8;
+}
+
 </script>
 
 <!-- pdf-lib (write stamp) -->
@@ -193,8 +210,10 @@
       if (file.size > 10 * 1024 * 1024) return setMsg("PDF 超过 10MB，请换小一点的文件", "err");
 
       setMsg("正在加载 PDF…");
-      pdfBytes = new Uint8Array(await file.arrayBuffer());
-      pdfDocJS = await pdfjsLib.getDocument({ data: pdfBytes }).promise;
+      const ab = await file.arrayBuffer();
+      pdfBytes = new Uint8Array(ab);                     // 给 pdf-lib 用
+      const pdfBytesForJs = new Uint8Array(ab.slice(0)); // 给 pdf.js 用（独立副本）
+      pdfDocJS = await pdfjsLib.getDocument({ data: pdfBytesForJs }).promise;
       pageCount = pdfDocJS.numPages;
 
       for (const k of Object.keys(stamps)) delete stamps[k];
@@ -374,7 +393,8 @@
       const sealBytes = new Uint8Array(await sealResp.arrayBuffer());
 
       const { PDFDocument } = PDFLib;
-      const pdfDoc = await PDFDocument.load(pdfBytes);
+      const fixedBytes = normalizePdfBytes(pdfBytes.slice(0)); // 做一次修正+拷贝
+      const pdfDoc = await PDFDocument.load(fixedBytes);
       const png = await pdfDoc.embedPng(sealBytes);
 
       for (const pStr of keys) {
